# -python-dataurlexport

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile_alpine  Dockerfile_debian  Dockerfile_pycharm  README.rst  pyproject.toml  tox.ini
docker/: entrypoint-test.sh  pre_commit_init.sh
src/dataurlexport/: __init__.py  console.py  exporter.py
tests/: __init__.py  conftest.py  test_console.py  test_dataurlexport.py
