[project]
name = "dataurlexport"
version = "0.2.0"
description = "Post-process RUNE outputs and export data urls as files"
authors = [{name="Eero af Heurlin", email="eero.afheurlin@iki.fi" }]
homepage = "https://github.com/rambo/python-dataurlexport/"
repository = "https://github.com/rambo/python-dataurlexport/"
license = "MIT"
readme = "README.rst"
dynamic = ["dependencies", "requires-python"]

[project.scripts]
dataurlexport = "dataurlexport.console:dataurlexport_cli"


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=dataurlexport --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"
asyncio_default_fixture_loop_scope="function"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.9"
libadvian = "^1.7"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
coverage = "^7.8"
pytest-cov = "^6.1"
pylint = "^3.3"
black = "^25.1"
bandit = "^1.8"
mypy = "^1.15"
pre-commit = "^4.2"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.5"


[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
